Fixing navbar collapses point (again)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@
     color: #ffffff !important;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 1000px) {
     .navbar-header {
         float: none;
     }
